# wp-hijack

./: .gitignore  README.md  config.json  pyproject.toml  remove_comments.py
wp_hijack/: __init__.py  cli.py  config.py  http_client.py  recon.py  scanner.py
wp_hijack/active_tests/: __init__.py  file_exposure.py  injection_probes.py  login_security.py  rest_api.py  xmlrpc.py
wp_hijack/agent/: __init__.py  agent_loop.py  memory.py  post_chat.py  prompts.py  session.py  tool_runner.py  tools.py
wp_hijack/ai/: __init__.py  attack_chain.py  chat.py  client.py  cve_explainer.py  cve_researcher.py  exploit_generator.py  exploit_prompts.py  false_positive.py  ollama_models.py  remediation.py  risk_scorer.py  summary.py  waf_bypass.py
wp_hijack/cms/: __init__.py  detector.py  drupal.py  joomla.py  wordpress.py
wp_hijack/enumerators/: __init__.py  plugins.py  themes.py  users.py
wp_hijack/pipeline/: __init__.py  confirmation_tests.py  confirmer.py  models.py  static_exploits.py
wp_hijack/reporting/: __init__.py  console.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py
wp_hijack/telegram/: __init__.py  bot.py  controller.py  notifier.py  pdf_playwright.py
wp_hijack/templates/: report.html.j2
wp_hijack/ui/: __init__.py  banner.py  display.py  progress.py  status.py  theme.py
wp_hijack/vulndb/: __init__.py  db.py  matcher.py  updater.py  wpvulnerability_api.py
wp_hijack/waf/: __init__.py  detector.py  evasion.py
